--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-21  Andreas Schwab  <schwab@suse.de>
+
+	* nss/test-netdb.c (output_hostent): Don't crash if h_aliases is
+	NULL.
+
 1999-07-21  Mark Kettenis  <kettenis@gnu.org>
 
 	* sysdeps/mach/hurd/read.c: Do not include <hurd.h> and
