--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+1999-07-23  Ulrich Drepper  <drepper@cygnus.com>
+
+	* elf/elf.h: Add ET_LOOS and ET_HIOS.
+	Add various EM_* constants.
+	Add SHN_LOOS and SHN_HIOS.
+	Add SHT_INIT_ARRAY, SHT_FINI_ARRAY, and SHT_PREINIT_ARRAY.
+	Add SHF_MERGE and SHF_STRINGS.
+	(ElfXX_Sym): Update description of st_other field.
+	Add STT_COMMON.
+	Add ELFXX_ST_VISIBILITY and ELFXX_ST_OTHER.
+	Add STV_* macros.
+	Update comment on DT_RPATH.  Add DT_RUNPATH, DT_FLAGS, DT_ENCODING,
+	DT_PREINIT_ARRAY, DT_PREINIT_ARRAYSZ.
+	Add DF_ORIGIN, DF_SYMBOLIC, DF_TEXTREL, and DF_BIND_NOW.
+
 1999-07-21  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* elf/dl-reloc.c (_dl_reloc_bad_type): New function.
