--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-24  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* elf/rtld.c (dl_main): Adopt to changed _dl_lookup_symbol
+	interface.
+
 1999-07-23  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* sysdeps/generic/bits/termios.h (ONOEOT): Change value to 1<<3, to
