--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-24  Ulrich Drepper  <drepper@cygnus.com>
 
+	* resolv/res_send.c: Add locks for res_send and res_close use.
+
 	* elf/Makefile (dl-routines): Add preinit.
 	* elf/Versions [ld.so] (GLIBC_2.2): Export _dl_preinit_next.
 	* elf/link.h (struct link_map): Add new field l_preinitcount.
