--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* misc/mntent_r.c: Allow spaces and tabs in entry names by
 	encoding these characters.
+	* misc/tst-mntent.c: Add test case for addmntent and getmntent.
 
 	* string/bits/string2.h: Fix aliasing problems.
 	* sysdeps/i386/i486/bits/string.h: Likewise.
