--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-07-26  Ulrich Drepper  <drepper@cygnus.com>
+
+	* wcsmbs/wcsrtombs.c (__wcsrtombs): When computing maximum number
+	of wide characters to convert do it right and don't overestimate
+	by multiplying with MB_CUR_MAX.
+	Reported by Bruno Haible <haible@ilog.fr>.
+
 1999-07-26  Jakub Jelinek  <jj@ultra.linux.jz>
 
 	* string/bits/string2.h (__strcpy_small): Avoid compile time warning.
