--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-26  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* hurd/hurdprio.c (_hurd_priority_which_map): Initialize PIDS.
+	Fix from Marcus Brinkmann <Marcus.Brinkmann@ruhr-uni-bochum.de>.
+
 1999-07-26  Ulrich Drepper  <drepper@cygnus.com>
 
 	* stdlib/wcstombs.c: Do not use global state.
