--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-29  Ulrich Drepper  <drepper@cygnus.com>
 
+	* sysdeps/i386/bits/string.h (__memset_cc): Fix typo in last patch.
+
 	* nis/nss_nis/nis-initgroups.c (_nss_nis_initgroups): Correct size
 	argument in realloc call.
 	* nis/nss_compat/compat-initgroups.c (_nss_compat_initgroups):
