--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-07-29  H.J. Lu  <hjl@gnu.org>
+
+	* stdlib/mbtowc.c: Include <string.h>.
+	* stdlib/wctomb.c: Likewise.
+	* sysdeps/unix/sysv/linux/fstatfs64.c: Likewise.
+	* sysdeps/unix/sysv/linux/statfs64.c: Likewise.
+
+	* misc/mntent_r.c: Include <alloca.h>.
+	* elf/dl-runtime.c: Likewise.
+
 1999-07-29  Andreas Schwab  <schwab@suse.de>
 
 	* misc/efgcvt.c (NDIGIT_MAX): Provide precomputed constants for
